--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "react-toastify": "^5.5.0",
     "styled-components": "^4.4.1"
   },
   "scripts": {
